# git-fat

./: .gitignore  DOCKER.md  Dockerfile  README.md  git-fat  pyproject.toml  test-example-repo.sh  test-in-container.sh  test.sh
src/git_fat/: __init__.py  __main__.py  cli.py  core.py
src/git_fat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
