[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-fat"
version = "1.0.0"
description = "Manage large binary files in Git without bloating the repository"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC0-1.0" }
dependencies = []

[project.scripts]
git-fat = "git_fat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
